--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,16 @@
 
 
 spring.sql.init.platform=h2
-spring.datasource.url=jdbc:h2:~/BDOdontologica
+#spring.datasource.url=jdbc:h2:~/BDOdontologica
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.format_sql=true
-server.port=8083
+#server.port=8083
 spring.h2.console.enabled=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop 
+#spring.jpa.hibernate.ddl-auto=create-drop
 #dps #comentar esta linea para que no borre la base de datos cada vez que la ejecutamos
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
